# StovBot

./: .gitignore  Cargo.toml  Dockerfile  README.md
scripts/: build.sh  fmt.sh  full_test.sh  run.sh  stop.sh  test.sh  usql.sh
src/: admin.rs  background.rs  bot.rs  client.rs  command.rs  database.rs  db.rs  discord.rs  main.rs  models.rs  script.rs  script_engine.rs  script_runner.rs  server.rs  special_command.rs  stovbot.rs  twitch.rs  waifu.rs
src/gui/: mod.rs
