[package]
name = "stovbot"
version = "0.13.0"
authors = ["Steve Mostovoy <stevemostovoysm@gmail.com>"]
edition = "2018"
default-run = "stovbot"

[[bin]]
name = "stovbot"
path = "src/stovbot.rs"

[[bin]]
name = "script_engine"
path = "src/script_engine.rs"

[profile.dev]
opt-level = 0
lto = false

[features]
# Include the Iced UI.
gui = ["iced", "iced_native", "iced_core"]
discord = ["serenity"]
twitch = ["twitchchat", "reqwest", "chrono"]
default = ["discord", "twitch"]

[dependencies]
twitchchat = { version = "0.7.2", optional = true }
reqwest = { version = "0.10.1", optional = true, features = ["blocking", "json"] }
chrono = { version = "0.4.10", optional = true}
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
env_logger = "0.4.3"
crossbeam = "0.7.3"
async-std = "1.4.0"
futures = "0.3.1"
serenity = {version = "0.7.4", optional = true }
logos = "0.9.7"
rhai = { git = "https://github.com/stovoy/rhai", branch = "master" }
rand = "0.7.2"
rusqlite = "0.21.0"
time = "0.1.0"
bus = "2.2.2"

# Optional dependencies
iced = { git = "https://github.com/hecrj/iced", branch = "master", optional = true}
iced_native = { git = "https://github.com/hecrj/iced", branch = "master", optional = true }
iced_core = { git = "https://github.com/hecrj/iced", branch = "master", optional = true }
